# fastapi-hackplate

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py  template.env
app/: dependencies.py  lifespan.py  main.py  types.py
app/auth/: abstract_plate.py
app/auth/local/: config.py
app/config/: config.py  logging.py
app/db/: abstract_plate.py
app/db/sqlite/: config.py
app/hackplate/: cli.py  config.py  cors.py  dependencies.py  exceptions.py  hackplate_types.py  lifespan.py  logging.py  toml_settings.py  types.py
app/hackplate/plates/: abstract_plates.py
app/hackplate/plates/auth_plates/auth0/: config.py  env_settings.py  helpers.py  routes.py
app/hackplate/plates/auth_plates/keycloak/: config.py  env_settings.py  helpers.py  routes.py  settings.json
app/hackplate/plates/auth_plates/local/: config.py  jwt.py
app/hackplate/plates/db_plates/mongo/: config.py
app/hackplate/plates/db_plates/postgres/: config.py  supabase_config.py
app/hackplate/plates/db_plates/sqlite/: config.py
app/hackplate/user/: adapters.py  managers.py  models.py  routes.py  schemas.py  utils.py
migrations/: env.py
tests/: conftest.py
