[project]
name = "fastapi-hackplate"
version = "0.1.0"
description = "A FastAPI hackathon template for rapid development and deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "invoke>=2.2.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.43.0",
]
