[project]
name = "fastapi-hackplate"
version = "0.1.0"
description = "A FastAPI hackathon template for rapid development and deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "invoke>=2.2.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "greenlet>=3.0.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.43.0",
    "asyncpg>=0.31.0",
    "motor>=3.7.1",
]
