[project]
name = "fastapi-hackplate"
version = "0.1.0"
description = "A FastAPI hackathon template for rapid development and deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "typer>=0.15.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "greenlet>=3.0.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.43.0",
    "asyncpg>=0.31.0",
    "motor>=3.7.1",
    "beanie>=2.0.0",
    "fastapi-users>=15.0.5",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "fastapi-users-db-beanie>=5.0.0",
]

[project.scripts]
hackplate = "app.hackplate.cli:app"

[tool.uv]
package = true

[tool.hackplate]

[tool.hackplate.db]

[tool.hackplate.auth]
